# demand-forecast-data-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: sample_online_retail.csv
docs/: data_quality_contracts.md  feature_registry.md  sample_model_report.md
sql/: features_product_daily.sql  features_product_daily_insert.sql  init.sql  marts_dim_product.sql  marts_dim_product_insert.sql  marts_fct_daily_product_sales.sql  marts_fct_daily_product_sales_insert.sql  raw_online_retail.sql  staging_online_retail.sql  staging_online_retail_insert.sql
src/: config.py  db.py
src/features/: build_features.py  registry.yml  validate_registry.py
src/ingestion/: download.py  load_online_retail.py
src/marts/: build_marts.py
src/model/: train_baseline.py
src/quality/: contracts.py  run_contracts.py
src/staging/: build_staging.py
tests/: test_contracts_integration.py  test_features.py  test_features_integration.py  test_ingestion.py  test_load_integration.py  test_marts.py  test_marts_integration.py  test_model.py  test_model_integration.py  test_smoke.py  test_staging.py  test_staging_integration.py
